--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -62,7 +62,7 @@
         </div>
         <div class="field">
           <%= f.label :category %>
-          <%= f.select :category, ["Rent","Sale"] %>
+          <%= f.select :category, ["Rent","Sell"] %>
         </div><br><br>
         <div class="field">
           <%= f.label :image1, "Main image" %>
